implement test method for rolestatuspredicate